[package]
name = "stellarlend-vesting"
version = "0.1.0"
edition = "2021"

[lib]
name = "stellarlend_vesting"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"



[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[dev-dependencies]
proptest = { workspace = true }
